# sphinx-pybtex-etal-style

./: .cspell.json  .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/: release-drafter.yml
src/sphinx_pybtex_etal_style/: __init__.py  _support_bibtex_math.py  style.py
